# poodle

./: .gitignore  Cargo.toml  Dockerfile  build.sh  install.sh  poodle.service  poodle.toml
src/: main.rs  moodle.rs
